# constitutional-ai-data-pipeline

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  config.py  data_handler.py  main.py  model_manager.py  pipeline.py  pyproject.toml  utils.py
constitutions/: constitution_anthropic.json  constitution_few.json  constitution_simple.json
