[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-ai-data-pipeline"
version = "0.1.0"
description = "Pipeline de datos para Constitutional AI inspirado en Hugging Face - genera datasets SFT y de preferencias"
authors = [
    {name = "Gonzalo Fuentes", email = "gonzalo.fuentes@example.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "llm-swarm",
    "transformers>=4.30.0",
    "huggingface_hub>=0.15.0",
    "pandas>=2.0.0",
    "datasets>=2.12.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "ruff>=0.0.275",
    "black>=23.0.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']